-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.11.0 FF
-
None
-
1
-
501f5c8bb (dev)
-
Foundation Sprint 135
Hi,
Since https://codereview.qt-project.org/c/qt/qtdeclarative/+/654150
QT fails to compile as rval.m_sslOptions is not guarded with #if QT_REMOVAL_QT7_DEPRECATED_SINCE(6, 11) on line 79
qtdeclarative/src/qmlnetwork/ssl/qqmlsslconfiguration_p.h:79:25: error: no member named 'm_sslOptions' in 'QQmlSslConfiguration'
79 | && lval.m_sslOptions == rval.m_sslOptions
| For Gerrit Dashboard: QTBUG-138838 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 665021,2 | QQmlSslConfiguration: fix compilation without deprecated APIs | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |