QQmlSslConfiguration: fix compilation without deprecated APIs

Forgot to guard m_sslOptions in one place in the original commit.

Amends cea8a1f8e175ab55a711194e442ff4737812f652.

Fixes: QTBUG-138838
Task-number: QTBUG-137900
Change-Id: Ia63ee5a0b49d6898a64b531a95eb869a71e2b676
Reviewed-by: Tatiana Borisova <tatiana.borisova@qt.io>